--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -11,9 +11,10 @@ The impact of hatcheries on assessment against CUs and LRPs is a key uncertainty
 - describe uncertainties arising from missing limited CU-level data. 
 
 ### Logistic-regression based LRPs
-- 
-- describe uncertainties arising from missing limited CU-level data. 
 
+- describe uncertainties arising from missing limited CU-level data. (
+- describe challenges from ppt
+- Also, it is not possible to assess sensitivity of LRPs to  structural assumptions about covariance in population dyanmics among CU and the relationship between aggregate abundances and CU statuses, as the LRP depends only on the logistic fit to observed data
 
 One caveat with logistic regression-based LRPs is that a single-metric dropping below the benchmark may not trigger red status over all in a multidimensional framework given high variability in spawner abundances for some CUs. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status in formal, peer-reviewed WSP assessments [add refs]. 
 
@@ -21,7 +22,7 @@ One caveat with logistic regression-based LRPs is that a single-metric dropping 
 ### Projection-based LRPs
 - these should be considered in development, and not used on their own without further simluation evluation.
 - describe uncertainties arising from missing limited CU-level data. 
-
+- describe challenges from ppt?
 
 Should highlight the identification of questions / outstanding guidance that were beyond our scope
 
